--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,10 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
+    <link rel="stylesheet" type="text/css" href="MyFontsWebfontsKit.css">
+
+
+
     <title>Pam's Final Project</title>
 
     <!-- Bootstrap core CSS -->
@@ -68,8 +72,7 @@
 
 <div class="jumbotron contact">
   <div class="container">
-
-  <h1>Contact</h1>
+  <img src="imgs/contactus.png">
   
 </div>
 
@@ -77,6 +80,8 @@
 <div class="container">
 
   <form>
+
+  Please contact us! 
 
    <div class="form-group">
     <label for="exampleInputName">Name</label>
