--- a/type.html
+++ b/type.html
@@ -1,134 +1,120 @@
 <<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="icon" href="../../favicon.ico">
+        <title>Pam's Final Project</title>
+        <!-- Bootstrap core CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="MyFontsWebfontsKit.css">
 
-    <title>Pam's Final Project</title>
-
-    <!-- Bootstrap core CSS -->
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="js/bootstrap/js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Custom styles for this template -->
-    <link href="carousel.css" rel="stylesheet">
-  </head>
-<head>
-	<title>Type</title>
-</head>
-<body>
-
- <div class="navbar-wrapper">
-      <div class="container">
-
-        <nav class="navbar navbar-inverse navbar-default navbar-fixed-top">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">Project name</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="ourstory.html">Our Story</a></li>
-                <li class="active"><a href="type.html">Locations</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="../navbar/"></a></li>
-                <li><a href="../navbar-static-top/"></a></li>
-                <li class="active"><a href="./"><span class="sr-only">(current)</span></a></li>
-              </ul>
-            </div><!--/.nav-collapse -->
-          </div>
-        </nav>
-      </div>
-    </div>
-
-
-        <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron type">
-      <div class="container">
-        <h1>Locations</h1>
         
-      </div>
-    </div>
+        <script src="js/bootstrap/js"></script>
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+        <!-- Custom styles for this template -->
+        <link href="carousel.css" rel="stylesheet">
+    </head>
+    <head>
+        <title>Type</title>
+    </head>
+    <body>
+        <div class="navbar-wrapper">
+            <div class="container">
+                <nav class="navbar navbar-inverse navbar-default navbar-fixed-top">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="#">Wander</a>
+                        </div>
+                        <div id="navbar" class="navbar-collapse collapse">
+                            <ul class="nav navbar-nav">
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="ourstory.html">Our Story</a></li>
+                                <li class="active"><a href="type.html">Locations</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                            <ul class="nav navbar-nav navbar-right">
+                                <li><a href="../navbar/"></a></li>
+                                <li><a href="../navbar-static-top/"></a></li>
+                                <li class="active"><a href="./"><span class="sr-only">(current)</span></a></li>
+                            </ul>
+                            </div><!--/.nav-collapse -->
+                        </div>
+                    </nav>
+                </div>
+            </div>
+            <!-- Main jumbotron for a primary marketing message or call to action -->
+            <div class="jumbotron type">
+                <div class="container">
+                    <img src="imgs/location.png">
+                </div>
+            </div>
+            <!-- Marketing messaging and featurettes
+            ================================================== -->
+            <!-- Wrap the rest of the page in another container to center all the content. -->
+            <div class="container marketing">
+            LOCATIONS BELOW
+                <div class="row">
+                    <div class="col-lg-4 box1" align="center">
+                        <div>
+                            <h2>Thailand</h2>
+                            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        </div>
+                    </div>
+                    <!-- /.col-lg-4 -->
+                    <div class="col-lg-4 box2" align="center">
+                        <div>
+                            <h2>Cambodia</h2>
+                            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        </div>
+                    </div>
+                    <!-- /.col-lg-4 -->
+                    <div class="col-lg-4 box3" align="center">
 
-    <!-- Marketing messaging and featurettes
-    ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
-
-    <div class="container marketing">
-
-      <!-- Three columns of text below the carousel -->
-      <div class="row">
-        <div class="col-lg-4" align="center">
-          <img src="imgs/car.jpg" width="242" height="200">
-          <h2>Our Story</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4" align="center">
-          <img src="imgs/icecream2.jpg" alt="Generic placeholder image" width="242" height="200">
-          <h2>Locations</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4" align="center">
-          <img src="imgs/icecream2.jpg" alt="Generic placeholder image" width="242" height="200">
-          <h2>Flavours</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-
-        <div class="row">
-        <div class="col-lg-4" align="center">
-          <img src="imgs/icecream2.jpg" width="242" height="200">
-          <h2>Our Story</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4" align="center">
-          <img src="imgs/icecream2.jpg" alt="Generic placeholder image" width="242" height="200">
-          <h2>Locations</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4" align="center">
-          <img csrc="imgs/icecream2.jpg" alt="Generic placeholder image" width="242" height="200">
-          <h2>Flavours</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
-
-
-
-
-
-</body>
-</html>
+                        <div>
+                            <h2>Vietnam</h2>
+                            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        </div>
+                        </div><!-- /.col-lg-4 -->
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-4 box4" align="center">
+                            <div>
+                                <h2>Indonesia</h2>
+                                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                            </div>
+                        </div>
+                        <!-- /.col-lg-4 -->
+                        <div class="col-lg-4 box5" align="center">
+                            <div>
+                                <h2>India</h2>
+                                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                            </div>
+                        </div>
+                        <!-- /.col-lg-4-->
+                        <div class="col-lg-4 box6" align="center">
+                            <div>
+                                <h2>Australia</h2>
+                                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                            </div>
+                            </div><!-- /.col-lg-4 -->
+                            </div><!-- /.row -->
+                        </div>
+                    </body>
+                </html>
