--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
   <body>
     <div class="navbar-wrapper">
       <div class="container">
-
         <nav class="navbar navbar-inverse navbar-default navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
@@ -45,7 +44,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Project name</a>
+              <a class="navbar-brand" href="index.html">
+              Wander</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -69,8 +69,9 @@
 
         <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-      <div class="container">
-        <h1>Hello, world!</h1>
+      <div class="container logo">
+      <img src="imgs/logo.png">
+   
         
       </div>
     </div>
@@ -79,7 +80,7 @@
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <div class="container marketing">
+    <div class="container">
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
