--- a/ourstory.html
+++ b/ourstory.html
@@ -9,6 +9,8 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
+    <link rel="stylesheet" type="text/css" href="MyFontsWebfontsKit.css">
+
     <title>Pam's Final Project</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -70,8 +72,7 @@
 
 <div class="jumbotron ourstory">
   <div class="container">
-
-  <h1>Our Story</h1>
+ <img src="imgs/story.png">
   
 </div>
 
