--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Project name</a>
+              <a class="navbar-brand" href="index.html">Wander</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -81,7 +81,7 @@
 
   <form>
 
-  Please contact us! 
+
 
    <div class="form-group">
     <label for="exampleInputName">Name</label>
@@ -107,6 +107,32 @@
 </form>
 
 </div>
+<!-- FOOTER -->
+      <footer>
+        <div class="pull-right">
+          <a href="http://facebook.com/pamelaconstance" class="fa-facebook fa" target="_blank"></a>
+ 
 
-</body>
+          <a href="http://twitter.com/pammcmeekin" class="fa-twitter fa"></a>
+
+
+          <a href="http://instagram.com/pammcmeekin" class="fa-instagram fa"></a>
+        </div>
+       
+        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      </footer>
+
+    </div><!-- /.container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script src="../../assets/js/vendor/holder.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
