--- a/type.html
+++ b/type.html
@@ -40,7 +40,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="#">Wander</a>
+                            <a class="navbar-brand" href="index.html">Wander</a>
                         </div>
                         <div id="navbar" class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
@@ -69,7 +69,7 @@
             ================================================== -->
             <!-- Wrap the rest of the page in another container to center all the content. -->
             <div class="container marketing">
-            LOCATIONS BELOW
+
                 <div class="row">
                     <div class="col-lg-4 box1" align="center">
                         <div>
@@ -116,5 +116,34 @@
                             </div><!-- /.col-lg-4 -->
                             </div><!-- /.row -->
                         </div>
-                    </body>
-                </html>
+
+                        <!-- FOOTER -->
+      <footer>
+        <div class="pull-right">
+          <a href="http://facebook.com/pamelaconstance" class="fa-facebook fa" target="_blank"></a>
+ 
+
+          <a href="http://twitter.com/pammcmeekin" class="fa-twitter fa"></a>
+
+
+          <a href="http://instagram.com/pammcmeekin" class="fa-instagram fa"></a>
+        </div>
+       
+        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      </footer>
+
+    </div><!-- /.container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script src="../../assets/js/vendor/holder.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
+</html>
+           
