--- a/ourstory.html
+++ b/ourstory.html
@@ -127,7 +127,10 @@
         <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
-    </div><!-- /.container -->
+    </div>
+
+    </body>
+    <!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
