--- a/contact.html
+++ b/contact.html
@@ -106,8 +106,29 @@
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
 
-</div>
+   <hr class="featurette-divider">
+      <hr class="featurette-divider">
+         <hr class="featurette-divider">
+            <hr class="featurette-divider">
+               <hr class="featurette-divider">
+
+<!-- </div> -->
 <!-- FOOTER -->
+
+<!-- <footer class="footer">
+      <div class="container pull-left">
+ <!--        <p class="text-muted">Place sticky footer content here.</p> -->
+
+<!--          <a href="http://facebook.com/pamelaconstance" class="fa-facebook fa" target="_blank"><
+<!-- /a>
+ 
+ -->
+        <!--   <a href="http://twitter.com/pammcmeekin" class="fa-twitter fa"></a>
+
+
+          <a href="http://instagram.com/pammcmeekin" class="fa-instagram fa"></a>
+      </div> -->
+   <!--  </footer> -->  
       <footer>
         <div class="pull-right">
           <a href="http://facebook.com/pamelaconstance" class="fa-facebook fa" target="_blank"></a>
@@ -122,7 +143,7 @@
         <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
-    </div><!-- /.container -->
+    </div> <!-- <-.container -><!-- ->  --
 
 
     <!-- Bootstrap core JavaScript
