--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
       <!-- START THE FEATURETTES -->
 
       <hr class="featurette-divider">
+         <hr class="featurette-divider">
+            <hr class="featurette-divider">
 
       <div class="row featurette">
         <div class="col-md-7">
