--- a/ourstory.html
+++ b/ourstory.html
@@ -113,7 +113,7 @@
       <!-- /END THE FEATURETTES -->
 
     <!-- FOOTER -->
-      <footer>
+  <!--     <footer>
         <div class="pull-right">
           <a href="http://facebook.com/pamelaconstance" class="fa-facebook fa" target="_blank"></a>
  
@@ -125,13 +125,32 @@
         </div>
        
         <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      </footer> -->
+
+
+
+  <!--   </div> -->
+   <hr class="featurette-divider">
+      <hr class="featurette-divider">
+         <hr class="featurette-divider">
+            <hr class="featurette-divider">
+
+     <!-- FOOTER -->
+      <footer>
+        <div class="pull-right">
+          <a href="http://facebook.com/pamelaconstance" class="fa-facebook fa" target="_blank"></a>
+ 
+
+          <a href="http://twitter.com/pammcmeekin" class="fa-twitter fa"></a>
+
+
+          <a href="http://instagram.com/pammcmeekin" class="fa-instagram fa"></a>
+        </div>
+       
+        <p class="pull-left">&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div>
-
-    </body>
-    <!-- /.container -->
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
