--- a/type.html
+++ b/type.html
@@ -113,10 +113,13 @@
                                 <h2>Australia</h2>
                                 <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
                             </div>
-                            </div><!-- /.col-lg-4 -->
+                          </div><!-- /.col-lg-4 -->
                             </div><!-- /.row -->
-                        </div>
 
+   <hr class="featurette-divider">
+      <hr class="featurette-divider">
+         <hr class="featurette-divider">
+            <hr class="featurette-divider">
                         <!-- FOOTER -->
       <footer>
         <div class="pull-right">
@@ -129,7 +132,7 @@
           <a href="http://instagram.com/pammcmeekin" class="fa-instagram fa"></a>
         </div>
        
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p class="pull-left">&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
